--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,38 +1,37 @@
-apply plugin: 'com.android.model.application'
+apply plugin: 'com.android.application'
 
-model{
-    android {
-        compileSdkVersion 25
-        buildToolsVersion "25.0.3"
+android {
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
-        defaultConfig {
-            applicationId "com.hzy.magic.app"
-            minSdkVersion.apiLevel 15
-            targetSdkVersion.apiLevel 25
-            versionCode 1
-            versionName "1.0"
-            testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        }
-    }
-
-    android.signingConfigs {
-        create("release") {
+    signingConfigs {
+        demokey {
             storeFile file('demokey.jks')
-            storePassword 'demokey'
+            storePassword "demokey"
             keyAlias 'demokey'
             keyPassword 'demokey'
         }
     }
-
-    android.buildTypes {
+    defaultConfig {
+        applicationId "com.hzy.magic.app"
+        minSdkVersion 15
+        targetSdkVersion 25
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    buildTypes {
+        debug {
+            minifyEnabled false
+            signingConfig signingConfigs.demokey
+        }
         release {
-            useProguard true
-            proguardFiles.add(file('proguard-rules.pro'))
-            signingConfig = $("android.signingConfigs.release")
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.demokey
         }
     }
 }
-
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -45,5 +44,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     testCompile 'junit:junit:4.12'
-    compile project(':libmagic')
+    debugCompile project(path: ':libmagic', configuration: 'debug')
+    releaseCompile project(path: ':libmagic', configuration: 'release')
 }
