--- a/libmagic/build.gradle
+++ b/libmagic/build.gradle
@@ -4,6 +4,7 @@ model {
     android {
         compileSdkVersion 25
         buildToolsVersion "25.0.3"
+        publishNonDefault true
 
         defaultConfig {
             minSdkVersion.apiLevel 15
@@ -26,12 +27,8 @@ model {
     android.buildTypes {
         debug {
             ndk {
-                CFlags.add('-DNDK_DEBUG')
+                CFlags.add('-DJNI_LOG')
             }
-        }
-        release {
-            minifyEnabled false
-            proguardFiles.add(file("proguard-rules.pro"))
         }
     }
 }
