--- a/libmagic/build.gradle
+++ b/libmagic/build.gradle
@@ -1,34 +1,36 @@
-apply plugin: 'com.android.model.library'
+apply plugin: 'com.android.library'
 
-model {
-    android {
-        compileSdkVersion 25
-        buildToolsVersion "25.0.3"
-        publishNonDefault true
+android {
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
+    publishNonDefault true
 
-        defaultConfig {
-            minSdkVersion.apiLevel 15
-            targetSdkVersion.apiLevel 25
-            versionCode 1
-            versionName "1.0"
-            testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        }
-
+    defaultConfig {
+        minSdkVersion 15
+        targetSdkVersion 25
+        versionCode 2
+        versionName "1.1.0"
         ndk {
-            moduleName "magic"
-            platformVersion 18
-            ldLibs.addAll(["log", "z"])
-            CFlags.addAll(['-std=c99', '-DHAVE_CONFIG_H'])
-            CFlags.add('-I' + file("src/main/jni/file"))
-            abiFilters.addAll(['armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'])
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86'
+        }
+        externalNativeBuild {
+            cmake {
+                arguments '-DANDROID_PLATFORM=android-18'
+            }
         }
     }
-
-    android.buildTypes {
+    buildTypes {
         debug {
-            ndk {
-                CFlags.add('-DJNI_LOG')
+            externalNativeBuild {
+                cmake {
+                    cFlags.add('-DNATIVE_LOG')
+                }
             }
+        }
+    }
+    externalNativeBuild {
+        cmake {
+            path 'src/main/cpp/CMakeLists.txt'
         }
     }
 }
