--- a/libmagic/src/main/AndroidManifest.xml
+++ b/libmagic/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.hzy.libmagic">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.hzy.libmagic">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:supportsRtl="true">
-
-    </application>
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true" />
 
 </manifest>
