--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     signingConfigs {
         demokey {
@@ -14,9 +14,9 @@ android {
     defaultConfig {
         applicationId "com.hzy.magic.app"
         minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 2
-        versionName "1.1.1"
+        targetSdkVersion 29
+        versionCode 3
+        versionName "1.1.2"
     }
     compileOptions {
         targetCompatibility JavaVersion.VERSION_1_8
@@ -47,12 +47,10 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.blankj:utilcode:1.23.7'
-    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    api 'com.jakewharton:butterknife:9.0.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.blankj:utilcode:1.25.9'
+    api 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation project(':libmagic')
 }
